[package]
name = "cisco-ucs-kvm-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
clap = { version = "4.5.35", features = ["env", "derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
quick-xml = { version = "0.37.4", features = ["serde", "serialize"] }
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219", features = ["derive"] }
serde-this-or-that = "0.5.0"
tap = "1.0.1"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread", "process"] }
veil = "0.2.0"
